<resources>
    <string name="app_name">Facebook Lite 3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="join">Join Facebook</string>
    <string name="name">Whats your name?</string>
    <string name="n">Enter the name you use in real life.</string>
    <string name="f">First name</string>
    <string name="s">Surname</string>
    <string name="acc">Already have an account?</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>